<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="false"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:elevation="28dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="28dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookTitle"
            style="@style/Book_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_title"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            app:layout_constraintTop_toTopOf="@id/imgBook" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookSubTitle"
            style="@style/Book_Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_subtitle"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            app:layout_constraintTop_toBottomOf="@id/tvBookTitle" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookPages"
            style="@style/Book_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_pages"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            app:layout_constraintTop_toBottomOf="@id/tvBookSubTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookEditor"
            style="@style/Book_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_editor"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            app:layout_constraintTop_toBottomOf="@id/tvBookPages" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookDate"
            style="@style/Book_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_date"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            app:layout_constraintTop_toBottomOf="@id/tvBookEditor" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>


