<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/LoginTitle"
        android:id="@+id/imgLogoIoasys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_logo_ioasys"
        android:drawablePadding="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/book_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:background="#52000000"
        android:hint="@string/email_hint"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#52000000"
        app:hintTextColor="#80FFFFFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogoIoasys"
        app:layout_constraintVertical_chainStyle="packed"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFildEditEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="#52000000"
        app:boxStrokeColor="#52000000"
        app:hintTextColor="#80FFFFFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmail"
        app:layout_constraintVertical_chainStyle="packed"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFildEditPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_btn"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/pink"
        app:cornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="@id/textFieldPassword"
        app:layout_constraintTop_toTopOf="@id/textFieldPassword"
        app:layout_constraintEnd_toEndOf="@id/textFieldPassword"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_txt_login_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
        app:layout_constraintEnd_toEndOf="@id/textFieldPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>